--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://allenjedb.github.io/allenxd.github.io/"
+baseURL: "https://allenjedb.github.io/"
 title: haxxxnotes
 paginate: 5
 theme: PaperMod
