--- a/config.yml
+++ b/config.yml
@@ -17,7 +17,7 @@ minify:
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   title: haxxxnotes
-  description: "Writeups, and anything I think is useful"
+  description: "Writeups, quick cheatsheet and dumps of anything that I think is useful!"
   keywords: [Writeup, Infosec, Hacking]
   author: allenxd
   # author: ["Me", "You"] # multiple authors
